Add a shell script to build AMLSim Java program